--- a/.github/workflows/update-packages.yml
+++ b/.github/workflows/update-packages.yml
@@ -20,6 +20,13 @@ jobs:
           node-version: 18
           registry-url: 'https://npm.pkg.github.com'  # GitHub Packages registry
 
+      - name: Debug Token
+        run: |
+          echo "Testing PAT authentication..."
+          curl -H "Authorization: token ${{ secrets.PAT }}" \
+           -H "Accept: application/vnd.github+json" \
+           https://api.github.com/user
+
       - name: Set up npm auth
         run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.PAT }}" > ~/.npmrc
 
