--- a/.github/workflows/update-packages.yml
+++ b/.github/workflows/update-packages.yml
@@ -27,8 +27,10 @@ jobs:
            -H "Accept: application/vnd.github+json" \
            https://api.github.com/user
 
-      - name: Set up npm auth
-        run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.PAT }}" > ~/.npmrc
+      - name: Set up .npmrc for GitHub Packages
+        run: |
+          echo "@STGroves:registry=https://npm.pkg.github.com/" >> ~/.npmrc
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.PAT }}" >> ~/.npmrc
 
       - name: Install Dependencies
         run: npm install
